--- a/lorenti/login.html
+++ b/lorenti/login.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <a href="register.html">regjistrohu!</a>
     <h1>Kyçja si Përdorues</h1>
     <form action="login.php" method="POST">
         <label for="email">Email:</label><br>
