--- a/lorent/register.html
+++ b/lorent/register.html
@@ -8,25 +8,25 @@
             background-color: #f2f2f2;
         }
         .container {
-            width: 300px;
-            padding: 16px;
+            width: 200px;
+            padding: 10px;
             background-color: white;
             margin: 0 auto;
-            margin-top: 50px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 40px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
         input[type=text], input[type=password], input[type=email] {
-            width: 100%;
-            padding: 12px;
-            margin: 8px 0;
+            width: 30%;
+            padding: 8px;
+            margin: 5px 0;
             display: inline-block;
             border: 1px solid #ccc;
             box-sizing: border-box;
         }
         button {
             background-color: #4CAF50;
-            color: white;
+            color: green;
             padding: 14px 20px;
             margin: 8px 0;
             border: none;
@@ -38,7 +38,7 @@
         }
         .forgot-password, .register-link {
             text-align: center;
-            margin-top: 10px;
+            margin-top: 4px;
         }
         .forgot-password a, .register-link a {
             color: #4CAF50;
